adição da função de troca de temas no JS

--- a/index.html
+++ b/index.html
@@ -36,4 +36,11 @@
       <span onclick="trocarTema()"><p>Trocar tema</p></span>
     </main>
   </body>
+  <script>
+
+    function trocarTema() {
+      document.body.classList.toggle("dark");
+    }
+
+  </script>
 </html>
